# conduit

./: .gitignore  go.mod  go.sum  go_mod_tidier.go
.github/workflows/: reviewdog.yml
cmd/conduit/: main.go
conduit/pipeline/: pipeline.go  pipeline_bench_test.go
conduit/plugins/exporters/: binary_exporter.go
conduit/plugins/exporters/all/: all.go
conduit/plugins/exporters/example/: README.md  block_hash_export.sh  block_hash_exporter.go  block_hash_exporter.sh
conduit/plugins/exporters/filewriter/: file_exporter.go  sample.yaml  util.go  util_test.go
conduit/plugins/exporters/http/: http_exporter.go  http_exporter_config.go  http_exporter_test.go  sample.yaml
conduit/plugins/exporters/postgresql/: postgresql_exporter.go  postgresql_exporter_config.go  postgresql_exporter_test.go
conduit/plugins/importers/algod/: README.md  algod_importer.go  algod_importer_test.go  mock_algod_test.go  sample.yaml
e2e_tests/: pyproject.toml
examples/: Justfile  Justfile.tmpl  Makefile  binary_polars.py  make_just.py  polars_exporter.ipynb  polars_exporter.py  requirements.txt
examples/data/: conduit.yml
examples/fixtures/small.allmixed.fileExported/: 0_block.json  1_block.json  2_block.json  3_block.json  4_block.json  5_block.json  6_block.json  7_block.json  8_block.json  9_block.json
examples/pldb/: blocks.feather
examples/pypolars_data/: conduit.yml
performance/: .gitignore  Makefile  docker-compose.yml  pg_stats.ipynb  requirements.txt
performance/conduit_data/: conduit.yml
performance/filereader_blocks/: .gitignore
(+4 files in other folders)
