[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "conduit_e2e_tests"
description = "End to end tests for Algorand Conduit"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "boto3==1.26.142",
    "msgpack==1.0.5",
    "py-algorand-sdk==2.2.0",
    "pytest==7.3.1",
    "PyYAML==6.0",
    "setuptools==67.7.2",
]


[project.scripts]
e2econduit = "e2e_conduit.e2econduit:main"
get-test-data = "e2e_common.get_test_data:main"
